updating acts_as_design initializing metho

--- a/README
+++ b/README
@@ -91,7 +91,7 @@ Notes: You can change the design_blocks root folder on your environment config f
 
 == Suggestions, Bug reports and Patches
 
-Send them to leandronunes@colivre.coop.br and terceiro@colivre.coop.br
+Send them to leandronunes@gmail.com and terceiro@colivre.coop.br
 
 == License
 
